<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplitShare</string>
    
    <!-- Main Activity -->
    <string name="owing">You owe:</string>
    <string name="owed">You\'re owed:</string>
    <string name="no_owing">Yay! You don\'t owe anyone!</string>
    <string name="no_owed">Aww! No one owes you.</string>
    
    <!-- Create User Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_user">Create User</string>
    <string name="error_missing_name">Please include your first and last name.</string>
    
    <!-- Create Transaction Activity -->
    <string name="transaction_to">To</string>
    <string name="transaction_from">From</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_reason">Reason</string>
    <string name="create_transaction">Create Transaction</string>

    <!-- Content Descriptions -->
    <string name="content_avatar">Avatar</string>
    <string name="content_add">Add</string>
   	<string name="content_minus">Minus</string>
   	<string name="content_reason">Reason</string>
    
</resources>
