<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/base_layout"
    android:orientation="vertical" >

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vmargin_large"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/create_transaction_from_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_niagara"
            android:text="@string/transaction_from"
            android:textColor="@drawable/text_button_niagara" />

        <Button
            android:id="@+id/create_transaction_to_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_niagara"
            android:text="@string/transaction_to"
            android:textColor="@drawable/text_button_niagara" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vmargin_small"
        android:layout_marginTop="@dimen/activity_vmargin_large"
        android:background="@drawable/base_layout"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:background="@drawable/container_element_padding"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vpadding_small"
            android:paddingLeft="@dimen/activity_hpadding_small"
            android:paddingRight="@dimen/activity_hpadding_small"
            android:paddingTop="@dimen/activity_vpadding_small" >

            <EditText
                android:id="@+id/create_transaction_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vmargin_small"
                android:background="@drawable/edit_text_gallery"
                android:gravity="center"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:textColor="@color/ssniagara"
                android:textColorHint="@color/ssaqua"
                android:textSize="@dimen/font_small" />

            <EditText
                android:id="@+id/create_transaction_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vmargin_small"
                android:layout_marginTop="@dimen/activity_vmargin_small"
                android:background="@drawable/edit_text_gallery"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:textColor="@color/ssniagara"
                android:textColorHint="@color/ssaqua"
                android:textSize="@dimen/font_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vmargin_small"
                android:layout_marginBottom="@dimen/activity_vmargin_large"
                android:background="@color/white"
                android:orientation="horizontal" >

                <ImageButton
                    android:id="@+id/create_transaction_minus_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:background="@null"
                    android:contentDescription="@string/content_minus"
                    android:src="@drawable/ic_minus" />

                <EditText
                    android:id="@+id/create_transaction_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_gallery"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/transaction_amount"
                    android:inputType="numberDecimal"
                    android:textColor="@color/ssniagara"
                    android:textColorHint="@color/ssaqua"
                    android:textSize="@dimen/font_small" />

                <ImageButton
                    android:id="@+id/create_transaction_add_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:background="@null"
                    android:contentDescription="@string/content_add"
                    android:src="@drawable/ic_add" />
            </LinearLayout>
            
            <Button
		        android:id="@+id/create_transaction_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/activity_vmargin_large"
		        android:background="@drawable/button_niagara"
		        android:gravity="center"
		        android:text="@string/create_user"
		        android:textColor="@drawable/text_button_niagara"
		        android:textSize="@dimen/font_small" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>